--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "enzyme-to-json": "^3.5.0",
     "jest": "^26.1.0",
     "live-server": "^1.2.1",
+    "mini-css-extract-plugin": "^0.9.0",
     "moment": "^2.27.0",
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
