--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "author": "Luke Stephenson",
   "license": "MIT",
   "scripts": {
-    "serve": "live-server public",
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
@@ -21,12 +20,7 @@
     "babel-loader": "^8.1.0",
     "babel-plugin-transform-class-properties": "6.24.1",
     "css-loader": "^3.6.0",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
-    "enzyme-to-json": "^3.5.0",
     "express": "^4",
-    "jest": "^26.1.0",
-    "live-server": "^1.2.1",
     "mini-css-extract-plugin": "^0.9.0",
     "moment": "^2.27.0",
     "node-sass": "^4.14.1",
@@ -38,16 +32,20 @@
     "react-modal": "^3.11.2",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
-    "react-test-renderer": "^16.13.1",
     "redux": "^4.0.5",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
     "uuid": "^8.2.0",
     "validator": "^13.0.0",
-    "webpack": "^4.43.0",
-    "webpack-dev-server": "^3.11.0"
+    "webpack": "^4.43.0"
   },
   "devDependencies": {
-    "webpack-cli": "^3.3.12"
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "enzyme-to-json": "^3.5.0",
+    "jest": "^26.1.0",
+    "react-test-renderer": "^16.13.1",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   }
 }
