--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "css-loader": "^3.6.0",
     "express": "^4",
     "firebase": "^7.16.1",
+    "history": "^4.7.2",
     "mini-css-extract-plugin": "^0.9.0",
     "moment": "^2.27.0",
     "node-sass": "^4.14.1",
