--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/preset-react": "^7.9.4",
     "babel-loader": "^8.1.0",
     "babel-plugin-transform-class-properties": "6.24.1",
+    "babel-polyfill": "^6.26.0",
     "css-loader": "^3.6.0",
     "express": "^4",
     "firebase": "^7.16.1",
